ajustes no swagger e padronização de responses
